--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
 MONGO_USERNAME=root
 MONGO_PASSWORD=example
-MONGO_ADMIN_USERNAME=admin
-MONGO_ADMIN_PASSWORD=adminpassword
-DATA_BASE_MONGO_URL=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongo:27017/
+DATA_BASE_MONGO_URL=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongo:27017
 
 GO_ENV=dev
 GO_PORT=8080
