--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,16 @@
-# Use root/example as user/password credentials
 version: '3.1'
 
 services:
-
-  mongo:
+  mongodb:
     image: mongo
     restart: always
     ports:
       - 27017:27017
+    networks:
+      - financialmongo_network
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
 
-  mongo-express:
-    image: mongo-express
-    restart: always
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_ADMIN_USERNAME}
-      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_ADMIN_PASSWORD}
-      ME_CONFIG_MONGODB_URL: ${DATA_BASE_MONGO_URL}
-      ME_CONFIG_BASICAUTH: false
+networks:
+  financialmongo_network:
