feat: create user in database

--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 MONGO_USERNAME=root
 MONGO_PASSWORD=example
-DATA_BASE_MONGO_URL=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongo:27017
+MONGO_PORT=1987
+MONGO_HOST_LOCAL=localhost
+DATA_BASE_MONGO_URL_LOCALHOST=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HOST_LOCAL}:${MONGO_PORT}
+
+MONGODB_USER_COLLECTION=user
+MONGO_DATABASE=user
 
 GO_ENV=dev
 GO_PORT=8080
