--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,13 @@ services:
     image: mongo
     restart: always
     ports:
-      - 27017:27017
+      - 1987:27017
     networks:
       - financialmongo_network
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+      MONGO_INITDB_ROOT_PORT: ${MONGO_PORT}
 
 networks:
   financialmongo_network:
