corrigindo minha ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Financial Organization API Continuous Deployment
 on:
   pull_request:
     branches:
-      - main
+      ['main', 'develop']
 
 jobs:
   financial-integration-continuous:
