feat: initialize server

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,8 @@ name: Financial Organization API Continuous Deployment
 on:
   pull_request:
     branches:
-      ['main', 'develop']
+      - main
+      - develop
 
 jobs:
   financial-integration-continuous:
