--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,25 @@
-version: '3.1'
+version: '3'
 
 services:
+  financial:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mongodb
   mongodb:
     image: mongo
     restart: always
     ports:
-      - 1987:27017
+      - "1987:27017"
     networks:
-      - financialmongo_network
+      - financial_network
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
       MONGO_INITDB_ROOT_PORT: ${MONGO_PORT}
 
 networks:
-  financialmongo_network:
+  financial_network:
